--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.17",
-        "tightenco/ziggy": "^2.4"
+        "tightenco/ziggy": "^2.4",
+        "endroid/qr-code": "^4.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
