--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     "require": {
         "php": "^8.2",
         "doctrine/dbal": "^4.2",
+        "endroid/qr-code": "^6.0",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.17",
-        "tightenco/ziggy": "^2.4",
-        "endroid/qr-code": "^4.8"
+        "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
